; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tnftp/src/extr_progressbar.c_alarmtimer.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tnftp/src/extr_progressbar.c_alarmtimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.itimerval = type { %struct.TYPE_2__, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i64 }

@ITIMER_REAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @alarmtimer(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.itimerval, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %3, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store i32 %4, i32* %6, align 8
  %7 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %3, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  store i64 0, i64* %8, align 8
  %9 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %3, i32 0, i32 1
  %10 = getelementptr inbounds %struct.itimerval, %struct.itimerval* %3, i32 0, i32 0
  %11 = bitcast %struct.TYPE_2__* %9 to i8*
  %12 = bitcast %struct.TYPE_2__* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %11, i8* align 8 %12, i64 16, i1 false)
  %13 = load i32, i32* @ITIMER_REAL, align 4
  %14 = call i32 @setitimer(i32 %13, %struct.itimerval* %3, i32* null)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @setitimer(i32, %struct.itimerval*, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
